<resources>
  <string name="app_name">Pet\'s Care&amp;Health</string>
  <string name="action_settings">Settings</string>
  <string name="action_remove_ads">Remove ads</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="main_activity_edit_animal_button">Edit Animal</string>
  <string name="main_activity_sign_out_dialog">Are you sure you want to sign out?</string>
  <string name="main_activity_sign_out_yes">Yes</string>
  <string name="main_activity_sign_out_no">No</string>
  <string name="main_activity_exit_dialog">Are you sure you want to exit from this app?</string>
  <string name="main_activity_exit_yes">Yes</string>
  <string name="main_activity_exit_no">No</string>
  <string name="menu_nav_info">Info</string>
  <string name="menu_nav_medical">Medical Records</string>
  <string name="menu_nav_notes">Notes</string>
  <string name="menu_nav_gallery">Gallery</string>
  <string name="menu_nav_reminders">Reminders</string>
  <string name="menu_nav_sign_out">Sign out</string>
  <string name="menu_nav_vets">Search vets</string>
  <string name="menu_nav_shops">Search pet shops</string>
  <string name="menu_nav_additional">Additional</string>
  <string name="menu_nav_animal_name">Animal</string>
  <string name="menu_main_contact">Contact</string>
  <string name="fab_animal">Animal</string>
  <string name="fab_note">Note</string>
  <string name="fab_medical">Medical record</string>
  <string name="fab_reminder">Reminder</string>
  <string name="fab_gallery">Gallery item</string>
  <string name="dialog_picker_title">Choose a type of animal</string>
  <string name="dialog_picker_dog">dog</string>
  <string name="dialog_picker_cat">cat</string>
  <string name="dialog_picker_hamster">hamster</string>
  <string name="dialog_picker_rabbit">rabbit</string>
  <string name="dialog_picker_fish">fish</string>
  <string name="dialog_picker_parrot">parrot</string>
  <string name="dialog_picker_turtle">turtle</string>
  <string name="dialog_picker_other">other</string>
  <string name="dialog_picker_other_type">Enter animal type</string>
  <string name="dialog_values_toast_form_invalid">Date and value fields are required</string>
  <string name="title_activity_add_animal">Add an animal</string>
  <string name="add_activity_name_form">Enter your pet\'s name</string>
  <string name="add_activity_date_form">Date of birth</string>
  <string name="add_activity_gender_form">Gender</string>
  <string name="add_activity_breed_form">Breed</string>
  <string name="add_activity_weight_form">Weight</string>
  <string name="add_activity_height_form">Height</string>
  <string name="add_activity_color_form">Color</string>
  <string name="add_activity_button_form">Add new Animal</string>
  <string name="add_activity_general_category">General</string>
  <string name="add_activity_other_category">Other</string>
  <string name="add_activity_toast_form">Name and date fields are required</string>
  <string name="add_note_dialog_title">Add new note</string>
  <string name="add_note_dialog_title_hint">Note title</string>
  <string name="add_note_dialog_title_tv">Title</string>
  <string name="add_note_dialog_content_hint">Note content</string>
  <string name="add_note_dialog_content_tv">Content</string>
  <string name="add_note_dialog_color_tv">Color</string>
  <string name="add_note_dialog_button_text">Add note</string>
  <string name="add_note_dialog_toast_form_invalid">Provide a title and content for this note</string>
  <string name="add_medical_dialog_title">Add new medical record</string>
  <string name="add_medical_dialog_title_hint">Medical record title</string>
  <string name="add_medical_dialog_title_tv">Title</string>
  <string name="add_medical_dialog_content_hint">Medical record comment</string>
  <string name="add_medical_dialog_content_tv">Comment</string>
  <string name="add_medical_dialog_hospital_hint">Hospital</string>
  <string name="add_medical_dialog_hospital_tv">Hospital</string>
  <string name="add_medical_dialog_date_hint">Date</string>
  <string name="add_medical_dialog_date_tv">Visit date</string>
  <string name="add_medical_dialog_button_text">Add record</string>
  <string name="add_medical_dialog_toast_form_invalid">Provide a title for this record</string>
  <string name="add_image_dialog_title">Add new gallery item</string>
  <string name="add_image_dialog_title_hint">Title</string>
  <string name="add_image_dialog_title_tv">Title</string>
  <string name="add_image_dialog_date_hint">Date</string>
  <string name="add_image_dialog_date_tv">Date</string>
  <string name="add_image_dialog_button_text">Add picture</string>
  <string name="add_image_dialog_toast_form_invalid">Image is required</string>
  <string name="add_image_dialog_toast_animal_not_set">Add animal first</string>
  <string name="add_reminder_dialog_title">Add new reminder</string>
  <string name="add_reminder_dialog_title_hint">Text</string>
  <string name="add_reminder_dialog_title_tv">Reminder text</string>
  <string name="add_reminder_dialog_date_hint">Date</string>
  <string name="add_reminder_dialog_date_tv">Reminder date</string>
  <string name="add_reminder_dialog_frequency_tv">Repetition</string>
  <string name="add_reminder_dialog_checkbox_text">Only once</string>
  <string name="add_reminder_dialog_button_text">Add reminder</string>
  <string name="add_reminder_dialog_toast_form_invalid">Provide a text and date for this reminder</string>
  <string-array name="numbers">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>15</item>
  </string-array>
  <string-array name="intervals">
    <item>days</item>
    <item>weeks</item>
    <item>months</item>
  </string-array>
  <string name="edit_image_dialog_title">Edit gallery item</string>
  <string name="edit_image_dialog_title_hint">Title</string>
  <string name="edit_image_dialog_title_tv">Title</string>
  <string name="edit_image_dialog_date_hint">Date</string>
  <string name="edit_image_dialog_date_tv">Date</string>
  <string name="edit_image_dialog_delete_button">Delete picture</string>
  <string name="edit_image_dialog_button_text">Save changes</string>
  <string name="edit_image_dialog_delete_question">Are you sure you want to delete this image?</string>
  <string name="edit_image_dialog_delete_YES">Yes</string>
  <string name="edit_image_dialog_delete_NO">No</string>
  <string name="edit_image_dialog_toast_form_invalid">Image is required</string>
  <string name="edit_image_dialog_toast_animal_not_set">Add animal first</string>
  <string name="edit_note_dialog_title">Edit note</string>
  <string name="edit_note_dialog_title_hint">Note title</string>
  <string name="edit_note_dialog_title_tv">Title</string>
  <string name="edit_note_dialog_content_hint">Note content</string>
  <string name="edit_note_dialog_content_tv">Content</string>
  <string name="edit_note_dialog_color_tv">Color</string>
  <string name="edit_note_dialog_button_text">Save changes</string>
  <string name="edit_note_dialog_toast_form_invalid">Provide a title and content for this note</string>
  <string name="edit_note_dialog_delete_button">Delete note</string>
  <string name="edit_note_dialog_delete_question">Are you sure you want to delete this note?</string>
  <string name="edit_note_dialog_delete_YES">Yes</string>
  <string name="edit_note_dialog_delete_NO">No</string>
  <string name="edit_medical_dialog_title">Edit medical record</string>
  <string name="edit_medical_dialog_title_hint">Medical record title</string>
  <string name="edit_medical_dialog_title_tv">Title</string>
  <string name="edit_medical_dialog_content_hint">Medical record comment</string>
  <string name="edit_medical_dialog_content_tv">Comment</string>
  <string name="edit_medical_dialog_hospital_hint">Hospital</string>
  <string name="edit_medical_dialog_hospital_tv">Hospital</string>
  <string name="edit_medical_dialog_date_hint">Date</string>
  <string name="edit_medical_dialog_date_tv">Visit date</string>
  <string name="edit_medical_dialog_button_text">Save changes</string>
  <string name="edit_medical_dialog_button_delete_text">Delete medical record</string>
  <string name="edit_medical_dialog_delete_question">Are you sure you want to delete this medical record?</string>
  <string name="edit_medical_dialog_delete_YES">Yes</string>
  <string name="edit_medical_dialog_delete_NO">No</string>
  <string name="edit_medical_dialog_toast_form_invalid">Provide a title for this record</string>
  <string name="edit_reminder_dialog_title">Edit reminder</string>
  <string name="edit_reminder_dialog_title_hint">Text</string>
  <string name="edit_reminder_dialog_title_tv">Reminder text</string>
  <string name="edit_reminder_dialog_date_hint">Date</string>
  <string name="edit_reminder_dialog_date_tv">Reminder date</string>
  <string name="edit_reminder_dialog_frequency_tv">Repetition</string>
  <string name="edit_reminder_dialog_checkbox_text">Only once</string>
  <string name="edit_reminder_dialog_button_text">Save changes</string>
  <string name="edit_reminder_dialog_button_delete_text">Delete reminder</string>
  <string name="edit_reminder_dialog_toast_form_invalid">Provide a text and date for this reminder</string>
  <string name="edit_reminder_dialog_delete_question">Are you sure you want to delete this reminder?</string>
  <string name="edit_reminder_dialog_delete_YES">Yes</string>
  <string name="edit_reminder_dialog_delete_NO">No</string>
  <string-array name="gender">
    <item>Male</item>
    <item>Female</item>
  </string-array>
  <string name="edit_activity_title">Edit Animal</string>
  <string name="edit_activity_button_save">Save Changes</string>
  <string name="edit_activity_button_delete">Delete Animal</string>
  <string name="dialog_back_pressed_question">Are you sure? All changes will be lost</string>
  <string name="edit_activity_dialog_delete_question">Are you sure you want to delete this animal?</string>
  <string name="dialog_ok_button">OK</string>
  <string name="dialog_cancel_button">Cancel</string>
  <string name="login_activity_title">LoginActivity</string>
  <string name="login_activity_email">Email address</string>
  <string name="login_activity_password">Password</string>
  <string name="login_activity_login_button">LOGIN</string>
  <string name="login_activity_create_account"><u>Create an account</u></string>
  <string name="login_activity_create_q_account">Don\'t have an account?</string>
  <string name="login_activity_or">or</string>
  <string name="login_activity_google">Log in with Google</string>
  <string name="login_activity_wrong_credentials">Check your email and password</string>
  <string name="login_activity_connection_problem">Check your Internet connection</string>
  <string name="login_activity_password_reset"><u>Forgot password?</u></string>
  <string name="login_activity_password_reset_toast_success">Email with instructions was sent to this address</string>
  <string name="login_activity_password_reset_toast_fail">That email does not exist in database</string>
  <string name="login_activity_password_reset_form_edit_text">Email address</string>
  <string name="dialog_chart_adding_dialog_date">Enter a date</string>
  <string name="dialog_chart_adding_dialog_value">Enter a value</string>
  <string name="dialog_chart_adding_dialog_positive_button">OK</string>
  <string name="dialog_chart_adding_dialog_negative_button">Cancel</string>
  <string name="settings_height_unit_title">Height measurement unit</string>
  <string name="settings_height_unit_default">cm</string>
  <string name="settings_weight_unit_title">Weight measurement unit</string>
  <string name="settings_weight_unit_default">kg</string>
</resources>