<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_row="9"
  android:background="@drawable/dialog_bg"
  android:columnCount="2">

  <TextView
    android:layout_width="180dp"
    android:layout_marginBottom="10dp"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_row="0"
    android:gravity="center"
    android:text="Choose a type of animal"
    android:textSize="18sp"/>

  <ImageView
    android:id="@+id/dialog_image_dog"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="0"
    android:layout_row="1"
    android:src="@drawable/ic_dog"/>

  <ImageView
    android:id="@+id/dialog_image_hamster"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="0"
    android:layout_row="3"
    android:src="@drawable/ic_hamster"/>

  <ImageView
    android:id="@+id/dialog_image_rabbit"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="0"
    android:layout_row="5"
    android:src="@drawable/ic_rabbit"/>

  <ImageView
    android:id="@+id/dialog_image_fish"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="0"
    android:layout_row="7"
    android:src="@drawable/ic_fish"/>

  <ImageView
    android:id="@+id/dialog_image_cat"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="1"
    android:layout_row="1"
    android:src="@drawable/ic_cat"/>

  <ImageView
    android:id="@+id/dialog_image_parrot"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="1"
    android:layout_row="3"
    android:src="@drawable/ic_parrot"/>

  <ImageView
    android:id="@+id/dialog_image_turtle"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="1"
    android:layout_row="5"
    android:src="@drawable/ic_turtle"/>


  <ImageView
    android:id="@+id/dialog_image_other"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:layout_column="1"
    android:layout_row="7"
    android:src="@drawable/ic_paw"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="0"
    android:layout_row="2"
    android:gravity="center"
    android:text="@string/dialog_picker_dog"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="0"
    android:layout_row="4"
    android:gravity="center"
    android:text="@string/dialog_picker_hamster"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="0"
    android:layout_row="6"
    android:gravity="center"
    android:text="@string/dialog_picker_rabbit"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="0"
    android:layout_row="8"
    android:gravity="center"
    android:text="@string/dialog_picker_fish"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="1"
    android:layout_row="2"
    android:gravity="center"
    android:text="@string/dialog_picker_cat"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="1"
    android:layout_row="4"
    android:gravity="center"
    android:text="@string/dialog_picker_parrot"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="1"
    android:layout_row="6"
    android:gravity="center"
    android:text="@string/dialog_picker_turtle"/>

  <TextView
    android:layout_width="90dp"
    android:layout_column="1"
    android:layout_row="8"
    android:gravity="center"
    android:text="@string/dialog_picker_other"/>

</GridLayout>