<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_margin="16dp"
  android:background="@drawable/dialog_bg"
  app:cardCornerRadius="20dp">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <FrameLayout
        android:id="@+id/colorFrame"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/edit_image_dialog_title"
          android:textColor="@android:color/white"
          android:textSize="25sp"/>
      </FrameLayout>


      <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/colorFrame"
        android:columnCount="2">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_columnWeight="0.3"
          android:layout_gravity="center"
          android:layout_row="1"
          android:gravity="center"
          android:text="@string/edit_image_dialog_title_tv"
          android:textColor="@color/colorPrimaryDark"/>


        <EditText
          android:id="@+id/titleEditText"
          android:layout_width="190dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_column="1"
          android:layout_columnWeight="0.7"
          android:layout_row="1"
          android:hint="@string/edit_image_dialog_title_hint"/>


        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_columnWeight="0.3"
          android:layout_gravity="center"
          android:layout_row="2"
          android:gravity="center"
          android:text="@string/edit_image_dialog_date_tv"
          android:textColor="@color/colorPrimaryDark"/>


        <EditText
          android:id="@+id/dateEditText"
          android:layout_width="190dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_column="1"
          android:layout_columnWeight="0.7"
          android:layout_row="2"
          android:focusable="false"
          android:hint="@string/edit_image_dialog_date_hint"/>

        <Button
          android:id="@+id/deleteGalleryItemButton"
          style="?android:attr/buttonBarButtonStyle"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:layout_column="0"
          android:layout_columnSpan="2"
          android:layout_row="3"
          android:text="@string/edit_image_dialog_delete_button"
          android:textColor="@color/colorAccent"/>


        <Button
          android:id="@+id/editImageButton"
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:layout_marginLeft="35dp"
          android:layout_marginRight="35dp"
          android:layout_column="0"
          android:layout_columnSpan="2"
          android:layout_row="4"
          android:background="@drawable/button_add_bg"
          android:text="@string/edit_image_dialog_button_text"
          android:textColor="@android:color/white"/>

      </GridLayout>


    </RelativeLayout>

  </ScrollView>

</android.support.v7.widget.CardView>