<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="20dp"
  android:layout_gravity="center"
  android:background="@drawable/dialog_bg"
  android:orientation="vertical">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/dateEditText"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="5dp"
      android:focusable="false"
      android:hint="@string/dialog_chart_adding_dialog_date"
      android:inputType="date"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/valueEditText"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="5dp"
      android:hint="@string/dialog_chart_adding_dialog_value"
      android:inputType="numberDecimal"/>

  </android.support.design.widget.TextInputLayout>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:orientation="horizontal">

    <Button
      android:id="@+id/negativeButton"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/fui_transparent"
      android:text="@string/dialog_chart_adding_dialog_negative_button"
      android:textColor="@color/colorAccent"/>

    <Button
      android:id="@+id/positiveButton"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:background="@color/fui_transparent"
      android:text="@string/dialog_chart_adding_dialog_positive_button"
      android:textColor="@color/colorAccent"/>
  </LinearLayout>

</LinearLayout>